# contextual-bandit-ope

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/commands/: clean.md  lint.md  notebook.md  quick-run.md  test.md  visualize.md
notebooks/: tutorial.ipynb
results/: all_tasks_df_data
src/pcmabinf/: __init__.py  _utils.py  cli.py  config.py  cross_fitting.py  data.py  estimators.py  logging_policy.py  metrics.py  policy.py  simulate.py  viz.py  world.py
tests/: conftest.py  test_cli.py  test_cross_fitting.py  test_data.py  test_estimators.py  test_logging_policy.py  test_metrics.py  test_policy.py  test_simulate.py  test_utils.py  test_viz.py  test_world.py
