[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcmabinf"
version = "0.1.0"
description = "Post Contextual Multi-Armed Bandit Inference — OPE estimators for contextual bandits"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "threadpoolctl>=3.2",
    "click>=8.1",
]

[project.scripts]
pcmabinf = "pcmabinf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pcmabinf"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
